refactor(api): ♻️ 优化通知组名称检查的代码风格
将使用 `Collectors.toList()` 的方式改为更简洁的 `.toList()` 方法，
保持代码风格统一性，提升可读性。